--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,9 +1,12 @@
 {
     "@metadata": {
 		"authors": [
-			"awajie"
+			"awajie",
+			"ZoruaFox"
 		]
 	},
-    "not-on-the-whitelist": "Domain $1 is not in the whitelist.",
-    "in-the-blacklist": "Domain $1 is in the blacklist."
+    "addimgtag": "Add Img Tag",
+    "addimgtag-desc": "Adds <img> tag support for MediaWiki 1.43 and later",
+    "addimgtag-whitelist-notice": "Domain $1 is not in the whitelist.",
+    "addimgtag-blacklist-notice": "Domain $1 is in the blacklist."
 }
