--- a/i18n/zh-hant.json
+++ b/i18n/zh-hant.json
@@ -8,5 +8,9 @@
     "addimgtag": "添加圖像標籤",
     "addimgtag-desc": "為MediaWiki 1.43和更高版本添加<img>標籤支持",
     "addimgtag-whitelist-notice": "網域 $1 不在白名單中。",
-    "addimgtag-blacklist-notice": "網域 $1 在黑名單中。"
+    "addimgtag-blacklist-notice": "網域 $1 在黑名單中。",
+    "config-desc-addimgtagwhitelist": "是否啟用白名單",
+    "config-desc-addimgtagwhitelistdomainslist": "白名單網域列表",
+    "config-desc-addimgtagblacklist": "是否啟用黑名單",
+    "config-desc-addimgtagblacklistdomainslist": "黑名單域名列表"
 }
