fix(i18n): 移除多余的<code>标签</code>以增强一致性

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -9,10 +9,10 @@
     "addimgtag-desc": "Erlaubt die Nutzung von <code>&lt;img&gt;</code>-Tags in MediaWiki >= 1.43",
     "addimgtag-whitelist-notice": "Domain $1 ist nicht in der Whitelist.",
     "addimgtag-blacklist-notice": "Domain $1 ist in der Blacklist.",
-    "addimgtag-invalid-src": "Ungültiges <code>src</code>-Attribut.",
-    "addimgtag-empty-src": "Das <code>src</code>-Attribut ist nicht gesetzt.",
-    "addimgtag-not-whitelisted-src": "Das <code>src</code>-Attribut ist nicht auf der Whitelist.",
-    "addimgtag-blacklisted-src": "Das <code>src</code>-Attribut steht auf der Blacklist.",
+    "addimgtag-invalid-src": "Ungültiges src-Attribut.",
+    "addimgtag-empty-src": "Das src-Attribut ist nicht gesetzt.",
+    "addimgtag-not-whitelisted-src": "Das src-Attribut ist nicht auf der Whitelist.",
+    "addimgtag-blacklisted-src": "Das src-Attribut steht auf der Blacklist.",
     "config-desc-addimgtagwhitelist": "Whitelisting aktivieren oder nicht",
     "config-desc-addimgtagwhitelistdomainslist": "Liste der gewhitelisteten Domains",
     "config-desc-addimgtagblacklist": "Blacklisting aktivieren oder nicht",
