--- a/i18n/en.json
+++ b/i18n/en.json
@@ -9,10 +9,10 @@
     "addimgtag-desc": "Adds <code>&lt;img&gt;</code> tag support for MediaWiki 1.43 and later",
     "addimgtag-whitelist-notice": "Domain $1 is not in the whitelist.",
     "addimgtag-blacklist-notice": "Domain $1 is in the blacklist.",
-    "addimgtag-invalid-src": "Invalid <code>src</code> attribute.",
-    "addimgtag-empty-src": "The <code>src</code> attribute is not set.",
-    "addimgtag-not-whitelisted-src": "The <code>src</code> attribute is not whitelisted.",
-    "addimgtag-blacklisted-src": "The <code>src</code> attribute is blacklisted.",
+    "addimgtag-invalid-src": "Invalid src attribute.",
+    "addimgtag-empty-src": "The src attribute is not set.",
+    "addimgtag-not-whitelisted-src": "The src attribute is not whitelisted.",
+    "addimgtag-blacklisted-src": "The src attribute is blacklisted.",
     "config-desc-addimgtagwhitelist": "Whether or not to enable whitelisting",
     "config-desc-addimgtagwhitelistdomainslist": "List of whitelisted domain names",
     "config-desc-addimgtagblacklist": "Whether or not to enable blacklisting",
