--- a/i18n/zh-hant.json
+++ b/i18n/zh-hant.json
@@ -9,10 +9,10 @@
     "addimgtag-desc": "為MediaWiki 1.43和更高版本添加<code>&lt;img&gt;</code>標籤支持",
     "addimgtag-whitelist-notice": "網域 $1 不在白名單中。",
     "addimgtag-blacklist-notice": "網域 $1 在黑名單中。",
-    "addimgtag-invalid-src": "無效的 <code>src</code> 屬性。",
-    "addimgtag-empty-src": "未設定 <code>src</code> 屬性。",
-    "addimgtag-not-whitelisted-src": "該 <code>src</code> 屬性未被列入白名單。",
-    "addimgtag-blacklisted-src": "該 <code>src</code> 屬性被列入黑名單。",
+    "addimgtag-invalid-src": "無效的 src 屬性。",
+    "addimgtag-empty-src": "未設定 src 屬性。",
+    "addimgtag-not-whitelisted-src": "該 src 屬性未被列入白名單。",
+    "addimgtag-blacklisted-src": "該 src 屬性被列入黑名單。",
     "config-desc-addimgtagwhitelist": "是否啟用白名單",
     "config-desc-addimgtagwhitelistdomainslist": "白名單網域列表",
     "config-desc-addimgtagblacklist": "是否啟用黑名單",
