--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -9,10 +9,10 @@
     "addimgtag-desc": "为MediaWiki 1.43和更高版本添加<code>&lt;img&gt;</code>标签支持",
     "addimgtag-whitelist-notice": "域名 $1 不在白名单中。",
     "addimgtag-blacklist-notice": "域名 $1 在黑名单中。",
-    "addimgtag-invalid-src": "无效的 <code>src</code> 属性。",
-    "addimgtag-empty-src": "未设置 <code>src</code> 属性。",
-    "addimgtag-not-whitelisted-src": "该 <code>src</code> 属性未被列入白名单。",
-    "addimgtag-blacklisted-src": "该 <code>src</code> 属性被列入黑名单。",
+    "addimgtag-invalid-src": "无效的 src 属性。",
+    "addimgtag-empty-src": "未设置 src 属性。",
+    "addimgtag-not-whitelisted-src": "该 src 属性未被列入白名单。",
+    "addimgtag-blacklisted-src": "该 src 属性被列入黑名单。",
     "config-desc-addimgtagwhitelist": "是否启用白名单",
     "config-desc-addimgtagwhitelistdomainslist": "白名单域名列表",
     "config-desc-addimgtagblacklist": "是否启用黑名单",
